--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -72,7 +72,7 @@ p {
 }
 
 .load-more {
-  display: none;
+  display: block;
   margin: 10px;
   width: 150px;
   height: 50px;
@@ -83,7 +83,7 @@ p {
 }
 
 .load-more.is-visible {
-  display: inline-block;
+  display: none;
 }
 
 load-more:hover {
