--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -65,7 +65,7 @@ p {
 }
 
 .load-more {
-  display: none;
+  display: block;
   margin: 10px;
   width: 150px;
   height: 50px;
@@ -76,7 +76,7 @@ p {
 }
 
 .load-more.is-visible {
-  display: inline-block;
+  display: none;
 }
 
 load-more:hover {
@@ -87,4 +87,4 @@ load-more:hover {
 load-more:focus {
   background-color: yellow;
   color: blue;
-}
+}/*# sourceMappingURL=index.css.map */
